src/main/resources/cpp/tests/pos/P22_ambiguous_overload.cpp
void f(int) { }
void f(int& r) { }

int main() {
    f(1);

    return 0;
}
