src/main/resources/cpp/tests/neg/N03_redeclaration.cpp
int main() {
    int b = 42;
    int &bb = b;

    // Re-Definition darf nicht akzeptiert werden
    int &b = bb;

    return 0;
}
